--- a/StoreSearch/zh-Hans.lproj/LoadingCell.strings
+++ b/StoreSearch/zh-Hans.lproj/LoadingCell.strings
@@ -1,3 +1,3 @@
 
 /* Class = "UILabel"; text = "Loading..."; ObjectID = "Tbi-h1-Y5Q"; */
-"Tbi-h1-Y5Q.text" = "下载中...";
+"Tbi-h1-Y5Q.text" = "加载中...";
